--- a/ios/GameZone01/Info.plist
+++ b/ios/GameZone01/Info.plist
@@ -69,6 +69,7 @@
 		<string>Nunito-Regular.ttf</string>
 		<string>Nunito-SemiBold.ttf</string>
 		<string>Nunito-SemiBoldItalic.ttf</string>
+		<string>AkayaTelivigala-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
