--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.3",
     "typescript": "^4.2.2"
   },
   "devDependencies": {
